remove unused try/catch block